Improve rocgdb cmake wrapper and python discovery
[debug-tools/rocgdb]

* Pass through the C/CXX compiler that CMake detects.
* Moves rpath patching to the install phase to avoid some possible races and
  align with how it is done elsewhere.
* Remove the execution of the testing suite from within the build. We still
  install the test suite and should run it post build. But not great to fail
  the build in the middle due to test issues.
* Added new THEROCK_SHARED_PYTHON_EXECUTABLES top level config variable to
  explicitly have the shared library python's we want to build with for
  embedded python cases (like rocgdb). I made the heuristic tri-state: If
  given, then all of them must have been built shared (or error). If not given
  but the default Python3_EXECUTABLE is suitable, that will be used. If not
  suitable, a warning will be issued that rocgdb is being build without python
  support. This balances the CI/CD case where we want to fail eagerly if the
  configuration is not valid with the developer case where we would like them
  to be able to make progress even if their environment is missing these
  components.
* Refactored the rocgdb cmake to support no-python and embedded python modes.
  Also updated the wrapper to fallback to "pynone", which will hit it built on
  a machine without a suitable Python for embedded use.
* Misc CMake quality of life improvements made.

[cmake]

* Added a helper therock_detect_shared_python_executables for the above and
  tested it on Alma8 using a each of the states.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,14 @@ set(THEROCK_SANITIZER "" CACHE STRING "Enable project wide sanitizer build (e.g.
 # List of python executables to use for multi-version python builds
 set(THEROCK_DIST_PYTHON_EXECUTABLES "" CACHE STRING "Build for multiple python versions in supported projects (default to Python3_EXECUTABLE if empty)")
 
+# List of python executables to use for building software that needs to embed
+# python (i.e. rocgdb). If this is empty then those components may build without
+# embedded python features. For production release, this is often different
+# from THEROCK_DIST_PYTHON_EXECUTABLES because the former is built without
+# libpython shared library support (because that is the safest way to build
+# extensions).
+set(THEROCK_SHARED_PYTHON_EXECUTABLES "" CACHE STRING "Build subprojects for embedded python variants (defaults to Python3_EXECUTABLE iff it was built shared)")
+
 # Source settings.
 # Use the rocm-libraries superrepo tracked in TheRock's `.gitmodules` or
 # allow to specify an alternative source location.
