--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -216,9 +216,9 @@ jobs:
       - name: Upload PyTorch manifest to S3 artifacts
         if: ${{ github.repository_owner == 'ROCm' }}
         run: |
-          aws s3 cp ${{ env.PACKAGE_DIST_DIR }}/manifests/ \
-            s3://${{ env.S3_BUCKET_ARTIFACTS }}/external-builds/pytorch/${{ github.run_id }}/${{ inputs.amdgpu_family }}/ \
-            --recursive --exclude "*" --include "*.json"
+          aws s3 cp \
+            "${{ env.PACKAGE_DIST_DIR }}/manifests/${{ inputs.amdgpu_family }}/therock_torch_manifest.json" \
+            "s3://${{ env.S3_BUCKET_ARTIFACTS }}/${{ github.run_id }}-linux/manifests/${{ inputs.amdgpu_family }}/therock_torch_manifest.json"
 
       - name: (Re-)Generate Python package release index for staging
         if: ${{ github.repository_owner == 'ROCm' }}
