--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -249,9 +249,9 @@ jobs:
         if: ${{ github.repository_owner == 'ROCm' }}
         shell: cmd
         run: |
-          aws s3 cp ${{ env.PACKAGE_DIST_DIR }}\manifests\ ^
-            s3://${{ env.S3_BUCKET_ARTIFACTS }}/external-builds/pytorch/${{ github.run_id }}/${{ inputs.amdgpu_family }}/ ^
-            --recursive --exclude "*" --include "*.json"
+          aws s3 cp ^
+            "${{ env.PACKAGE_DIST_DIR }}\manifests\therock_torch_manifest.json" ^
+            "s3://${{ env.S3_BUCKET_ARTIFACTS }}/external-builds/pytorch/${{ github.run_id }}/${{ inputs.amdgpu_family }}/therock_torch_manifest.json"
 
       - name: (Re-)Generate Python package release index for staging
         if: ${{ github.repository_owner == 'ROCm' }}
