--- a/ml-libs/CMakeLists.txt
+++ b/ml-libs/CMakeLists.txt
@@ -163,9 +163,9 @@ if(THEROCK_ENABLE_HIPDNN)
       -DHIP_PLATFORM=amd
       -DROCM_PATH=
       -DROCM_DIR=
-      "-DHIP_DNN_SKIP_TESTS=$<NOT:$<BOOL:${THEROCK_BUILD_TESTING}>>"
-      -DHIP_DNN_BUILD_PLUGINS=OFF
-      -DHIP_DNN_GENERATE_SDK_HEADERS=OFF
+      "-DHIPDNN_SKIP_TESTS=$<NOT:$<BOOL:${THEROCK_BUILD_TESTING}>>"
+      -DHIPDNN_BUILD_PLUGINS=OFF
+      -DHIPDNN_GENERATE_SDK_HEADERS=OFF
       -DENABLE_CLANG_TIDY=OFF
       -DENABLE_CLANG_FORMAT=OFF
     CMAKE_INCLUDES
@@ -221,7 +221,7 @@ if(THEROCK_ENABLE_MIOPEN_PLUGIN)
       -DHIP_PLATFORM=amd
       -DROCM_PATH=
       -DROCM_DIR=
-      "-DHIP_DNN_SKIP_TESTS=$<NOT:$<BOOL:${THEROCK_BUILD_TESTING}>>"
+      "-DHIPDNN_SKIP_TESTS=$<NOT:$<BOOL:${THEROCK_BUILD_TESTING}>>"
     CMAKE_INCLUDES
       therock_explicit_finders.cmake
     COMPILER_TOOLCHAIN
