Remove postinstall script for amdrocm package

--- a/build_tools/packaging/linux/package.json
+++ b/build_tools/packaging/linux/package.json
@@ -1554,6 +1554,7 @@
     "BuildArch": "x86_64",
     "DEBDepends": [
       "amdrocm-base",
+      "amdrocm-sysdeps",
       "amdrocm-llvm",
       "amdrocm-runtime",
       "amdrocm-blas",
@@ -1569,6 +1570,7 @@
     ],
     "RPMRequires": [
       "amdrocm-base",
+      "amdrocm-sysdeps",
       "amdrocm-llvm",
       "amdrocm-runtime",
       "amdrocm-blas",
@@ -1616,7 +1618,6 @@
     "Vendor": "Advanced Micro Devices, Inc",
     "Homepage": "https://github.com/ROCm/rocm-libraries",
     "Metapackage": "True",
-    "Postinstall": "True",
     "Gfxarch": "True"
   },
   {
