--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -216,9 +216,13 @@ jobs:
       - name: Upload PyTorch manifest to S3 artifacts
         if: ${{ github.repository_owner == 'ROCm' }}
         run: |
+          REF="${{ inputs.pytorch_git_ref }}"
+          TRACK="${REF//\//-}"
+          PY="${{ inputs.python_version }}"; PY="${PY#py}"
+          MANIFEST_NAME="therock-manifest_torch_py${PY}_${TRACK}.json"
           aws s3 cp \
-            "${{ env.PACKAGE_DIST_DIR }}/manifests/${{ inputs.amdgpu_family }}/therock_torch_manifest.json" \
-            "s3://${{ env.S3_BUCKET_ARTIFACTS }}/${{ github.run_id }}-linux/manifests/${{ inputs.amdgpu_family }}/therock_torch_manifest.json"
+            "${{ env.PACKAGE_DIST_DIR }}/manifests/${MANIFEST_NAME}" \
+            "s3://${{ env.S3_BUCKET_ARTIFACTS }}/${{ github.run_id }}-linux/manifests/${{ inputs.amdgpu_family }}/${MANIFEST_NAME}"
 
       - name: (Re-)Generate Python package release index for staging
         if: ${{ github.repository_owner == 'ROCm' }}
