--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -249,9 +249,14 @@ jobs:
         if: ${{ github.repository_owner == 'ROCm' }}
         shell: cmd
         run: |
+          set "REF=${{ inputs.pytorch_git_ref }}"
+          set "TRACK=%REF:/=-%"
+          set "PY=${{ inputs.python_version }}"
+          if "%PY:~0,2%"=="py" set "PY=%PY:~2%"
+          set "MANIFEST_NAME=therock-manifest_torch_py%PY%_%TRACK%.json"
           aws s3 cp ^
-            "${{ env.PACKAGE_DIST_DIR }}\manifests\therock_torch_manifest.json" ^
-            "s3://${{ env.S3_BUCKET_ARTIFACTS }}/external-builds/pytorch/${{ github.run_id }}/${{ inputs.amdgpu_family }}/therock_torch_manifest.json"
+            "${{ env.PACKAGE_DIST_DIR }}\manifests\%MANIFEST_NAME%" ^
+            "s3://${{ env.S3_BUCKET_ARTIFACTS }}/${{ github.run_id }}-windows/manifests/${{ inputs.amdgpu_family }}/%MANIFEST_NAME%"
 
       - name: (Re-)Generate Python package release index for staging
         if: ${{ github.repository_owner == 'ROCm' }}
