Add hipDNN integration test project
This will be subject of an upcoming RFC, but in brief the goal is to
define hipDNN test batteries in one place, which will then test common
cases for all registered plugins. There's no reason for each plugin to
write an identical test for a Conv2D node for example.

--- a/.gitmodules
+++ b/.gitmodules
@@ -27,7 +27,7 @@
 	url = https://github.com/ROCm/rocprof-trace-decoder.git
 [submodule "rocm-libraries"]
 	path = rocm-libraries
-	url = https://github.com/ROCm/rocm-libraries
+	url = https://github.com/AaronStGeorge/rocm-libraries.git
 	branch = develop
 [submodule "rocm-systems"]
 	path = rocm-systems
