--- a/ml-libs/CMakeLists.txt
+++ b/ml-libs/CMakeLists.txt
@@ -342,3 +342,69 @@ if(THEROCK_ENABLE_HIPDNN_SAMPLES)
       hipDNN_samples
   )
 endif(THEROCK_ENABLE_HIPDNN_SAMPLES)
+
+if(THEROCK_ENABLE_HIPDNN_INTEGRATION_TESTS)
+  ##############################################################################
+  # hipDNN Integration Tests
+  ##############################################################################
+
+  therock_cmake_subproject_declare(hipdnn-integration-tests
+    EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_LIBRARIES_SOURCE_DIR}/projects/hipdnn-integration-tests"
+    BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/hipdnn-integration-tests"
+    BACKGROUND_BUILD
+    CMAKE_ARGS
+      -DHIP_PLATFORM=amd
+    CMAKE_INCLUDES
+      therock_explicit_finders.cmake
+    COMPILER_TOOLCHAIN
+      amd-hip
+    BUILD_DEPS
+      hip-clr
+      hipDNN
+      therock-flatbuffers
+      therock-fmt
+      therock-nlohmann-json
+      therock-spdlog
+      therock-googletest
+    RUNTIME_DEPS
+      hip-clr
+      hipDNN
+  )
+  therock_cmake_subproject_activate(hipdnn-integration-tests)
+
+  therock_provide_artifact(hipdnn-integration-tests
+    TARGET_NEUTRAL
+    DESCRIPTOR artifact-hipdnn-integration-tests.toml
+    COMPONENTS
+      test
+    SUBPROJECT_DEPS
+      hipdnn-integration-tests
+  )
+
+  # Generate JSON manifest of plugins enabled in the current configuration of
+  # the super-build. The integration test suite will check that the expected
+  # plugins are loaded at runtime.
+  #
+  # NOTE: THEROCK_ENABLE_*_PLUGIN variables are set by the build topology, so
+  # should include sub components; for example THEROCK_ENABLE_FUSILLI_PLUGIN
+  # should be enabled even if the user did not explicitly provide the variable,
+  # instead providing THEROCK_ENABLE_ALL or THEROCK_ENABLE_IREE_LIBS.
+  #
+  # NOTE: we need to write this file here (as it reads cache variables from the
+  # super build) but it should install as part of the hipdnn-integration project
+  # subproject (and run through the normal build -> stage -> dist workflow)
+  # rather than install as part of the super-project - so the install happens in
+  # post_hook_hipdnn-integration-tests.cmake.
+  set(_plugins_json_array "")
+  if(THEROCK_ENABLE_MIOPEN_PLUGIN)
+    list(APPEND _plugins_json_array "\"miopen\"")
+  endif()
+  if(THEROCK_ENABLE_FUSILLI_PLUGIN)
+    list(APPEND _plugins_json_array "\"fusilli\"")
+  endif()
+  string(REPLACE ";" ", " _plugins_json_str "${_plugins_json_array}")
+
+  set(_manifest_file "${CMAKE_CURRENT_BINARY_DIR}/build_enabled_hipdnn_plugins_manifest.json")
+  file(WRITE "${_manifest_file}" "{\n  \"plugins\": [${_plugins_json_str}]\n}\n")
+
+endif(THEROCK_ENABLE_HIPDNN_INTEGRATION_TESTS)
