--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -220,6 +220,7 @@ jobs:
           PY="${{ inputs.python_version }}"; PY="${PY#py}"
           TRACK="${{ inputs.pytorch_git_ref }}"; TRACK="${TRACK//\//-}"
           MANIFEST_NAME="therock-manifest_torch_py${PY}_${TRACK}.json"
+          ls -l "${PACKAGE_DIST_DIR}/manifests" || dir "${PACKAGE_DIST_DIR}\manifests"
           aws s3 cp \
             "${{ env.PACKAGE_DIST_DIR }}/manifests/${MANIFEST_NAME}" \
             "s3://${{ env.S3_BUCKET_ARTIFACTS }}/${{ github.run_id }}-linux/manifests/${{ inputs.amdgpu_family }}/${MANIFEST_NAME}"
