--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -254,6 +254,8 @@ jobs:
           if "%PY:~0,2%"=="py" set "PY=%PY:~2%"
           set "MANIFEST_NAME=therock-manifest_torch_py%PY%_${{ inputs.pytorch_git_ref }}.json"
           set "MANIFEST_NAME=%MANIFEST_NAME:/=-%"
+          echo "Available manifest files:"
+          ls -l "${PACKAGE_DIST_DIR}/manifests" || dir "${PACKAGE_DIST_DIR}\manifests"
           aws s3 cp ^
             "${{ env.PACKAGE_DIST_DIR }}\manifests\%MANIFEST_NAME%" ^
             "s3://${{ env.S3_BUCKET_ARTIFACTS }}/${{ github.run_id }}-windows/manifests/${{ inputs.amdgpu_family }}/%MANIFEST_NAME%"
