Address additional PR review comments
This commit addresses more review feedback from PR #2771.

Review Comments Addressed:
1. Use ternary operator in setup.yml to consolidate checkout steps
2. Combine duplicate functions - detect_external_projects.py now imports
   from configure_ci.py instead of duplicating code
3. Pass therock_ref through to Linux/Windows build workflows so external
   repos can specify which TheRock branch to use
4. Simplify configure_ci.py imports - remove unnecessary try/except since
   external repos always have TheRock checked out

Changes:
- setup.yml: Consolidated 3 checkout steps into 2 using ternary for path
- detect_external_projects.py: Import shared functions from configure_ci.py
- configure_ci.py: Removed try/except import pattern, simplified
- ci.yml: Pass therock_ref to Linux and Windows jobs
- ci_linux.yml: Accept and pass therock_ref to build workflow
- ci_windows.yml: Accept and pass therock_ref to build workflow
- build_portable_linux_artifacts.yml: Accept therock_ref, use in checkout
- build_windows_artifacts.yml: Accept therock_ref, use in checkout

Testing:
- All linter checks pass
- No import errors

Reviewer: @geomin12

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -53,6 +53,10 @@ on:
         type: boolean
         description: "Whether source is from external repo (rocm-libraries/systems)"
         default: false
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
 
 # See the details regarding permissions from the link:
 # https://github.com/aws-actions/configure-aws-credentials?tab=readme-ov-file#oidc
@@ -97,6 +101,7 @@ jobs:
         with:
           repository: "ROCm/TheRock"
           path: TheRock
+          ref: ${{ inputs.therock_ref || 'main' }}
 
       - name: Auto-detect external source configuration
         if: ${{ inputs.external_source_checkout }}
