--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -36,6 +36,10 @@ on:
         type: boolean
         description: "Whether source is from external repo (rocm-libraries/systems)"
         default: false
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
 
 permissions:
   contents: read
@@ -55,6 +59,7 @@ jobs:
       build_variant_suffix: ${{ inputs.build_variant_suffix }}
       expect_failure: ${{ inputs.expect_failure }}
       external_source_checkout: ${{ inputs.external_source_checkout }}
+      therock_ref: ${{ inputs.therock_ref }}
     permissions:
       contents: read
       id-token: write
