--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -33,6 +33,10 @@ on:
         type: boolean
         description: "Whether source is from external repo (rocm-libraries/systems)"
         default: false
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
 
 permissions:
   contents: read
@@ -52,6 +56,7 @@ jobs:
       package_version: ${{ inputs.rocm_package_version }}
       expect_failure: ${{ inputs.expect_failure }}
       external_source_checkout: ${{ inputs.external_source_checkout }}
+      therock_ref: ${{ inputs.therock_ref }}
     permissions:
       contents: read
       id-token: write
